--- a/start-Q/index.html
+++ b/start-Q/index.html
@@ -1,27 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
-    <script src="app.js" defer></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-    <title>start</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
+        <script src="app.js" defer></script>
+        <script src="https://kit.fontawesome.com/722592c862.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="style.css">
+        <title>start</title>
+    </head>
 
 <body>
     <header>
-
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-sm-12">
+                    <div class="menu d-flex align-items-center justify-content-between">
+                        <div class="imgbox">
+                            <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/navbar-logo.svg"
+                                alt="">
+                        </div>
+                        <nav>
+                            <a href="#nice">SERVICES</a>
+                            <a href="#portfolio">PORTFOLIO</a>
+                            <a href="#about">ABOUT</a>
+                            <a href="#team">TEAM</a>
+                            <a href="#contact">CONTACT</a>
+                        </nav>
+                        <div class="box">
+                            <h1>MENU</h1>
+                            <div class="icon">
+                                <i class="fa-solid fa-bars"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
 
     <main>
-
+        <section id="nice">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-sm-12">
+                        <div class="textbox text-center">
+                            <h1>Welcome To Our Studio!</h1>
+                            <h3>IT'S NICE TO MEET YOU</h3>
+                            <div class="btn">TELL ME MORE</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
