--- a/start-Q/index.html
+++ b/start-Q/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
-        <script src="app.js" defer></script>
-        <script src="https://kit.fontawesome.com/722592c862.js" crossorigin="anonymous"></script>
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="style.css">
-        <title>start</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
+    <script src="app.js" defer></script>
+    <script src="https://kit.fontawesome.com/722592c862.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <title>start</title>
+</head>
 
 <body>
     <header>
@@ -27,7 +27,7 @@
                                 alt="">
                         </div>
                         <nav>
-                            <a href="#nice">SERVICES</a>
+                            <a href="#services">SERVICES</a>
                             <a href="#portfolio">PORTFOLIO</a>
                             <a href="#about">ABOUT</a>
                             <a href="#team">TEAM</a>
@@ -46,10 +46,11 @@
     </header>
 
     <main>
+        <!-- nice section -->
         <section id="nice">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 col-sm-12">
+                    <div class="col-md-12">
                         <div class="textbox text-center">
                             <h1>Welcome To Our Studio!</h1>
                             <h3>IT'S NICE TO MEET YOU</h3>
@@ -59,6 +60,143 @@
                 </div>
             </div>
         </section>
+        <!-- services section -->
+        <section id="services">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <div class="textbox">
+                            <h1>SERVICES</h1>
+                            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="box">
+                            <div class="icon">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </div>
+                            <h1>E-Commerce</h1>
+                            <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
+                                inventore harum ex magni, dicta impedit.</h3>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="box">
+                            <div class="icon">
+                                <i class="fa-solid fa-laptop"></i>
+                            </div>
+                            <h1>Responsive Design</h1>
+                            <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
+                                inventore harum ex magni, dicta impedit.</h3>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="box">
+                            <div class="icon">
+                                <i class="fa-solid fa-lock"></i>
+                            </div>
+                            <h1>Web Security</h1>
+                            <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
+                                inventore harum ex magni, dicta impedit.</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- portfolio section -->
+        <section id="portfolio">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h1>PORTFOLIO</h1>
+                        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="imgbox">
+                            <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/portfolio/1.jpg" alt="">
+                            <div class="overlay">
+                                <i class="fa-solid fa-plus"></i>
+                            </div>
+                        </div>
+                        <div class="textbox">
+                            <h2>Threads</h2>
+                            <h3>Illustration</h3>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="imgbox">
+                            <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/portfolio/2.jpg" alt="">
+                            <div class="overlay">
+                                <i class="fa-solid fa-plus"></i>
+                            </div>
+                        </div>
+                        <div class="textbox">
+                            <h2>Explore</h2>
+                            <h3>Graphic Design</h3>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="imgbox">
+                            <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/portfolio/3.jpg" alt="">
+                            <div class="overlay">
+                                <i class="fa-solid fa-plus"></i>
+                            </div>
+                        </div>
+                        <div class="textbox">
+                            <h2>Finish</h2>
+                            <h3>Identity</h3>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="imgbox">
+                            <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/portfolio/4.jpg" alt="">
+                            <div class="overlay">
+                                <i class="fa-solid fa-plus"></i>
+                            </div>
+                        </div>
+                        <div class="textbox">
+                            <h2>Lines</h2>
+                            <h3>Branding</h3>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="imgbox">
+                            <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/portfolio/5.jpg" alt="">
+                            <div class="overlay">
+                                <i class="fa-solid fa-plus"></i>
+                            </div>
+                        </div>
+                        <div class="textbox">
+                            <h2>Southwest</h2>
+                            <h3>Website Design</h3>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="imgbox">
+                            <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/portfolio/6.jpg" alt="">
+                            <div class="overlay">
+                                <i class="fa-solid fa-plus"></i>
+                            </div>
+                        </div>
+                        <div class="textbox">
+                            <h2>Window</h2>
+                            <h3>Photography</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+
+
+
+
     </main>
 
     <footer>
