--- a/start-Q/index.html
+++ b/start-Q/index.html
@@ -115,88 +115,292 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-md-6">
-                        <div class="imgbox">
-                            <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/portfolio/1.jpg" alt="">
-                            <div class="overlay">
-                                <i class="fa-solid fa-plus"></i>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="box">
+                            <div class="imgbox d-flex justify-content-start">
+                                <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/portfolio/1.jpg"
+                                    alt="">
+                                <div class="overlay d-flex align-items-center justify-content-center">
+                                    <div class="icon">
+                                        <i class="fa-solid fa-plus"></i>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="textbox">
-                            <h2>Threads</h2>
-                            <h3>Illustration</h3>
+                            <div class="textbox text-center">
+                                <h2>Threads</h2>
+                                <h3>Illustration</h3>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="imgbox">
-                            <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/portfolio/2.jpg" alt="">
-                            <div class="overlay">
-                                <i class="fa-solid fa-plus"></i>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="box">
+                            <div class="imgbox">
+                                <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/portfolio/2.jpg"
+                                    alt="">
+                                <div class="overlay d-flex align-items-center justify-content-center">
+                                    <div class="icon">
+                                        <i class="fa-solid fa-plus"></i>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="textbox">
-                            <h2>Explore</h2>
-                            <h3>Graphic Design</h3>
+                            <div class="textbox text-center">
+                                <h2>Explore</h2>
+                                <h3>Graphic Design</h3>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="imgbox">
-                            <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/portfolio/3.jpg" alt="">
-                            <div class="overlay">
-                                <i class="fa-solid fa-plus"></i>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="box">
+                            <div class="imgbox">
+                                <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/portfolio/3.jpg"
+                                    alt="">
+                                <div class="overlay d-flex align-items-center justify-content-center">
+                                    <div class="icon">
+                                        <i class="fa-solid fa-plus"></i>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="textbox">
-                            <h2>Finish</h2>
-                            <h3>Identity</h3>
+                            <div class="textbox text-center">
+                                <h2>Finish</h2>
+                                <h3>Identity</h3>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="imgbox">
-                            <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/portfolio/4.jpg" alt="">
-                            <div class="overlay">
-                                <i class="fa-solid fa-plus"></i>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="box">
+                            <div class="imgbox">
+                                <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/portfolio/4.jpg"
+                                    alt="">
+                                <div class="overlay d-flex align-items-center justify-content-center">
+                                    <div class="icon">
+                                        <i class="fa-solid fa-plus"></i>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="textbox">
-                            <h2>Lines</h2>
-                            <h3>Branding</h3>
+                            <div class="textbox text-center">
+                                <h2>Lines</h2>
+                                <h3>Branding</h3>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="imgbox">
-                            <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/portfolio/5.jpg" alt="">
-                            <div class="overlay">
-                                <i class="fa-solid fa-plus"></i>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="box">
+                            <div class="imgbox">
+                                <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/portfolio/5.jpg"
+                                    alt="">
+                                <div class="overlay d-flex align-items-center justify-content-center">
+                                    <div class="icon">
+                                        <i class="fa-solid fa-plus"></i>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="textbox">
-                            <h2>Southwest</h2>
-                            <h3>Website Design</h3>
+                            <div class="textbox text-center">
+                                <h2>Southwest</h2>
+                                <h3>Website Design</h3>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="imgbox">
-                            <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/portfolio/6.jpg" alt="">
-                            <div class="overlay">
-                                <i class="fa-solid fa-plus"></i>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="box">
+                            <div class="imgbox">
+                                <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/portfolio/6.jpg"
+                                    alt="">
+                                <div class="overlay d-flex align-items-center justify-content-center">
+                                    <div class="icon">
+                                        <i class="fa-solid fa-plus"></i>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="textbox">
-                            <h2>Window</h2>
-                            <h3>Photography</h3>
+                            <div class="textbox text-center">
+                                <h2>Window</h2>
+                                <h3>Photography</h3>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
-
-
-
-
-
-
+        <!-- about section -->
+        <section id="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12r">
+                        <div class="txt1 text-center">
+                            <h1>ABOUT</h1>
+                            <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 pt-5">
+                        <div class="box d-flex">
+                            <div class="textbox">
+                                <h1>2009-2011</h1>
+                                <h2>Our Humble Beginnings</h2>
+                                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                                    sapiente,
+                                    totam reiciendis temporibus qui quibusdam, recusandce sit vero unde, sed, incidunt
+                                    et ea
+                                    quo
+                                    dolore laudantium consectetur!</h3>
+                            </div>
+                            <div class="imgbox">
+                                <img src="about 01.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 pt-5">
+                        <div class="box d-flex justify-content-end">
+                            <div class="imgbox">
+                                <img src="about 02.jpg" alt="">
+                            </div>
+                            <div class="textbox txt-left">
+                                <h1>March 2011</h1>
+                                <h2>An Agency is Born</h2>
+                                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                                    sapiente,
+                                    totam reiciendis temporibus qui quibusdam, recusandce sit vero unde, sed, incidunt
+                                    et ea
+                                    quo
+                                    dolore laudantium consectetur!</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 pt-5">
+                        <div class="box d-flex">
+                            <div class="textbox">
+                                <h1>December 2012</h1>
+                                <h2>Transition to Full Service</h2>
+                                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                                    sapiente,
+                                    totam reiciendis temporibus qui quibusdam, recusandce sit vero unde, sed, incidunt
+                                    et ea
+                                    quo
+                                    dolore laudantium consectetur!</h3>
+                            </div>
+                            <div class="imgbox">
+                                <img src="about 03.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 pt-5">
+                        <div class="box d-flex justify-content-end">
+                            <div class="imgbox">
+                                <img src="about 04.jpg" alt="">
+                            </div>
+                            <div class="textbox txt-left">
+                                <h1>July 2020</h1>
+                                <h2>Phase Two Expansion</h2>
+                                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                                    sapiente,
+                                    totam reiciendis temporibus qui quibusdam, recusandce sit vero unde, sed, incidunt
+                                    et ea
+                                    quo
+                                    dolore laudantium consectetur!</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 d-flex justify-content-center">
+                        <div class="circle">
+                            <h1>Be Part <br> Of Our <br> Story!</h1>
+                        </div>
+                    </div>
+                </div>
+        </section>
+        <!-- team section -->
+        <section id="team">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h1>Our Amazing Team</h1>
+                        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 col-lg-4 text-center">
+                        <div class="imgbox">
+                            <img src="team 01.jpg" alt="">
+                        </div>
+                        <h2>Parveen Anand</h2>
+                        <h4>Lead Designer</h4>
+                        <ul>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-12 col-lg-4 text-center">
+                        <div class="imgbox">
+                            <img src="team 02.jpg" alt="">
+                        </div>
+                        <h2>Diana Petersen</h2>
+                        <h4>Lead Marketer</h4>
+                        <ul>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-12 col-lg-4 text-center">
+                        <div class="imgbox">
+                            <img src="team 03.jpg" alt="">
+                        </div>
+                        <h2>Larry Parker</h2>
+                        <h4>Lead Developer</h4>
+                        <ul>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 d-flex justify-content-center">
+                        <div class="textbox">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam
+                                veritatis,
+                                quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
